[package]
name = "game_test"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.14.2"
bevy-fps-ui = "0.2.0"   
bevy_rapier3d = "0.27"
bevy_egui = "0.29" 
rand="0.8"
renet = { version = "0.0.16", features = ["serde"] }
serde = {version = "1.0", features = ["derive"]}
bincode = "1.3.3"
local-ip-address = "0.6.3"


#For port forwarded servers
public-ip = "0.2.2"
tokio = {version = "1.0", features = ["full"]}

bevy_renet = "0.0.12"
# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"
# Optimize for size in the wasm-release profile to reduce load times and bandwidth usage on web.
[profile.wasm-release]
# Default to release profile values.
inherits = "release"
# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime performance.
opt-level = "s"
# Strip all debugging information from the binary to slightly reduce file size.
strip = "debuginfo"
